# real-time-ecommerce-sales

./: .gitignore  README.md
backend/: Makefile  airflow.cfg  pyproject.toml  transaction_dag.py
backend/e_commerce/: gen_fake_data.py  main.py  process_data.py  visualize_data.ipynb
backend/tests/: test_get_data.py
